--- a/source/404.html
+++ b/source/404.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8">
     <title>404</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link rel="stylesheet" href="styles/styles.css">
-    <script src="scripts/index.js" defer></script>
+    <meta content="width=device-width,initial-scale=1" name="viewport">
+    <link href="styles/vendors/index.scss" rel="stylesheet">
+    <script defer src="scripts/index.js"></script>
   </head>
   <body class="page__body">
     <h1>404</h1>
