--- a/source/index.html
+++ b/source/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Название проекта</title>
   <meta content="width=device-width,initial-scale=1" name="viewport">
-  <link href="styles/styles.scss" rel="stylesheet">
+  <link href="styles/vendors/index.scss" rel="stylesheet">
   <script defer src="scripts/index.js"></script>
 </head>
 <body class="page__body">
