--- a/source/index.html
+++ b/source/index.html
@@ -2,45 +2,48 @@
 <html class="page" lang="ru">
 <head>
   <meta charset="UTF-8">
-  <title>Название проекта</title>
+  <title>Кэт энерджи - Функциональное питание для котов</title>
   <meta content="width=device-width,initial-scale=1" name="viewport">
+  <meta
+    content="Cat Energy - функциональное питание для котов.
+    Подберите программу питания для вашего питомца: похудение или набор массы. Натуральные компоненты и полезные вещества."
+    name="description">
   <link href="styles/vendors/index.scss" rel="stylesheet">
-  <script defer src="scripts/index.js"></script>
 </head>
 <body class="page__body">
 <header class="main-header">
   <nav class="main-header__nav nav">
     <a class="nav__main-link" href="#"><img alt="Супер котик в плаще" src="#"></a>
-    <ul class="nav__links site-links">
-      <li class="site-links__item"><a href="">Главная</a></li>
-      <li class="site-links__item"><a href="#">Каталог продукции</a></li>
-      <li class="site-links__item"><a href="#">Подбор программы</a></li>
+    <ul class="nav__links">
+      <li class="nav__item"><a href="">Главная</a></li>
+      <li class="nav__item"><a href="#">Каталог продукции</a></li>
+      <li class="nav__item"><a href="#">Подбор программы</a></li>
     </ul>
   </nav>
-  <button class="nav__toggle"><span class="sr-only">Открыть мобильное меню</span><img alt="" src="#"></button>
+  <button aria-label="Мобильное меню" class="nav__toggle"><img alt="" src="#"></button>
 </header>
 <main>
   <section class="intro">
     <h1 class="intro__title">Функциональное питание для котов</h1>
     <p class="intro__subtitle">Занялся собой? Займись котом!</p>
-    <button class="intro__button action">Подобрать программу</button>
+    <button class="intro__button button">Подобрать программу</button>
   </section>
   <section class="programs">
     <h2 class="sr-only">Виды программ</h2>
     <ul class="programs__list">
-      <li class="programs__item program">
-        <h3 class="program__title">Похудение</h3>
-        <p class="program__description">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора
+      <li class="programs__item program-card">
+        <h3 class="program-card__title">Похудение</h3>
+        <p class="program-card__description">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора
           на диету! Cat Energy Slim
           поможет вашему питомцу сбросить лишний вес.</p>
-        <a class="icon-link" href="#">каталог slim</a>
+        <a class="icon-arrow-link" href="#">каталог slim</a>
       </li>
-      <li class="programs__item program">
-        <h3 class="program__title">Набор массы</h3>
-        <p class="program__description">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro
+      <li class="programs__item program-card">
+        <h3 class="program-card__title">Набор массы</h3>
+        <p class="program-card__description">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro
           поможет вашему коту нарастить
           необходимые мышцы!</p>
-        <a class="icon-link" href="#">каталог pro</a>
+        <a class="icon-arrow-link" href="#">каталог pro</a>
       </li>
     </ul>
   </section>
@@ -71,30 +74,39 @@
       без изнуряющих тренировок! При этом он не менял своих
       привычек и по-прежнему спит по 16 часов в день.
     </p>
-  </section>
-  <section class="real-example__diet diet-params">
-    <dl class="diet-params__list">
-      <div class="diet-params__container diet-params__container--accent">
-        <dt class="diet-params__term">снижение веса</dt>
-        <dd class="diet-params__description">5&nbsp;кг</dd>
+    <div class="real-example__diet diet-params">
+      <dl class="diet-params__list">
+        <div class="diet-params__container diet-params__container--accent">
+          <dt class="diet-params__term">снижение веса</dt>
+          <dd class="diet-params__description">5&nbsp;кг</dd>
+        </div>
+        <div class="diet-params__container diet-params__container--accent">
+          <dt class="diet-params__term">затрачено времени</dt>
+          <dd class="diet-params__description">60&nbsp;ДНЕЙ</dd>
+        </div>
+        <div class="diet-params__container">
+          <dt class="diet-params__term">Затраты на питание:</dt>
+          <dd class="diet-params__description">15 000 РУБ.</dd>
+        </div>
+      </dl>
+      <div class="real-example__comparison">
+        <div class="real-example__comparison-container">
+          <div class="real-example__image-wrapper real-example__image-wrapper--before">
+            <img alt="Кот до диеты" class="real-example__image" src="img/before-cat.jpg">
+          </div>
+          <div class="real-example__image-wrapper real-example__image-wrapper--after">
+            <img alt="Кот после диеты" class="real-example__image" src="img/after-cat.jpg">
+          </div>
+          <div class="real-example__slider">
+            <button aria-label="Передвинуть ползунок сравнения" class="real-example__slider-handle" type="button"></button>
+          </div>
+        </div>
       </div>
-      <div class="diet-params__container diet-params__container--accent">
-        <dt class="diet-params__term">затрачено времени</dt>
-        <dd class="diet-params__description">60&nbsp;ДНЕЙ</dd>
-      </div>
-      <div class="diet-params__container">
-        <dt class="diet-params__term">Затраты на питание:</dt>
-        <dd class="diet-params__description">15 000 РУБ.</dd>
-      </div>
-    </dl>
-    <div class="real-example__comparison">
-      <label class="sr-only" for="slider">Слайдер</label>
-      <input class="slider" id="slider" max="100" min="0" type="range" value="50">
     </div>
   </section>
 </main>
 <footer class="footer">
-  <header class="footer__header">
+  <div class="footer__header">
     <section class="footer__contacts">
       <h2 class="footer__title">приглашаем к сотрудничеству дилеров!</h2>
       <address class="footer__address address">
@@ -106,8 +118,8 @@
       <div>yandex map</div>
       <figcaption class="sr-only">Как к нам добраться</figcaption>
     </figure>
-  </header>
-  <nav class="footer__nav">
+  </div>
+  <div class="footer__nav">
     <a class="footer__logo" href="#">
       <span class="sr-only">Главная</span>
     </a>
@@ -135,7 +147,8 @@
       <span class="sr-only">HTML Academy</span>
       <img alt="" class="social-links-list__icon" src="">
     </a>
-  </nav>
+  </div>
 </footer>
+<script src="scripts/index.js"></script>
 </body>
 </html>
