feat: добавлен каталог продукции и ссылки на страницы в навигации

--- a/source/index.html
+++ b/source/index.html
@@ -13,10 +13,10 @@
 <body class="page__body">
 <header class="main-header">
   <nav class="main-header__nav nav">
-    <a class="nav__main-link" href="#"><img alt="Супер котик в плаще" src="#"></a>
+    <a class="nav__main-link" href="index.html"><img alt="Супер котик в плаще" src="#"></a>
     <ul class="nav__links">
-      <li class="nav__item"><a href="">Главная</a></li>
-      <li class="nav__item"><a href="#">Каталог продукции</a></li>
+      <li class="nav__item"><a href="index.html">Главная</a></li>
+      <li class="nav__item"><a href="catalog.html">Каталог продукции</a></li>
       <li class="nav__item"><a href="#">Подбор программы</a></li>
     </ul>
   </nav>
