feat: добавлены размеры изображений и улучшены классы секции подписки

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -12,21 +12,21 @@
 <body class="page__body">
 <header class="main-header">
   <nav class="main-header__nav nav">
-    <a class="nav__main-link" href="index.html"><img alt="Супер котик в плаще" src="#"></a>
+    <a class="nav__main-link" href="index.html"><img alt="Супер котик в плаще" height="50" src="#" width="150"></a>
     <ul class="nav__links">
       <li class="nav__item"><a href="index.html">Главная</a></li>
       <li class="nav__item"><a href="catalog.html">Каталог продукции</a></li>
       <li class="nav__item"><a href="#">Подбор программы</a></li>
     </ul>
   </nav>
-  <button aria-label="Мобильное меню" class="nav__toggle"><img alt="" src="#"></button>
+  <button aria-label="Мобильное меню" class="nav__toggle"><img alt="" height="24" src="#" width="24"></button>
 </header>
 <main>
   <section class="catalog">
     <h1 class="catalog__title">Каталог продукции</h1>
     <ul class="catalog__list">
       <li class="catalog__item product-card">
-        <img alt="Cat Energy PRO 500 г" class="product-card__image" src="#">
+        <img alt="Cat Energy PRO 500 г" class="product-card__image" height="280" src="#" width="280">
         <div class="product-card__info">
           <h3 class="product-card__title">Cat Energy PRO 500 г</h3>
           <dl class="product-card__details">
@@ -47,7 +47,7 @@
         <button class="product-card__button button">Заказать</button>
       </li>
       <li class="catalog__item product-card">
-        <img alt="Cat Energy PRO 1000 г" class="product-card__image" src="#">
+        <img alt="Cat Energy PRO 1000 г" class="product-card__image" height="280" src="#" width="280">
         <div class="product-card__info">
           <h3 class="product-card__title">Cat Energy PRO 1000 г</h3>
           <dl class="product-card__details">
@@ -68,7 +68,7 @@
         <button class="product-card__button button">Заказать</button>
       </li>
       <li class="catalog__item product-card">
-        <img alt="Cat Energy SLIM 500 г" class="product-card__image" src="#">
+        <img alt="Cat Energy SLIM 500 г" class="product-card__image" height="280" src="#" width="280">
         <div class="product-card__info">
           <h3 class="product-card__title">Cat Energy SLIM 500 г</h3>
           <dl class="product-card__details">
@@ -111,14 +111,14 @@
       </li>
     </ul>
   </section>
-  <section class="subscribe">
+  <section class="subscription">
     <h2 class="sr-only">Подписаться на рассылку об акциях</h2>
-    <p class="subscribe__title">Акции и новинки</p>
-    <p class="subscribe__description">Подпишитесь на наши новости и не пропустите ни одного предложения!</p>
-    <form action="#" class="subscribe__form form" method="post">
+    <p class="subscription__title">Акции и новинки</p>
+    <p class="subscription__description">Подпишитесь на наши новости и не пропустите ни одного предложения!</p>
+    <form action="#" class="subscription__form form" method="post">
       <label class="sr-only" for="email">Ваш email</label>
       <input class="form__input" id="email" minlength="5" placeholder="кuklachev@gmail.com" required type="email">
-      <button class="subscribe__button button" type="submit">Подписаться</button>
+      <button class="subscription__button button" type="submit">Подписаться</button>
     </form>
   </section>
   <section class="promo">
@@ -150,26 +150,26 @@
     <ul class="footer__social-links social-links-list">
       <li class="social-links-list__list">
         <a class="social-links-list__item" href="">
-          <img alt="" class="social-links-list__icon" src="">
+          <img alt="" class="social-links-list__icon" height="24" src="" width="24">
           <span class="sr-only">Мы в VK</span>
         </a>
       </li>
       <li class="social-links-list__list">
         <a class="social-links-list__item" href="">
-          <img alt="" class="social-links-list__icon" src="">
+          <img alt="" class="social-links-list__icon" height="24" src="" width="24">
           <span class="sr-only">Мы в Youtume</span>
         </a>
       </li>
       <li class="social-links-list__list">
         <a class="social-links-list__item" href="">
-          <img alt="" class="social-links-list__icon" src="">
+          <img alt="" class="social-links-list__icon" height="24" src="" width="24">
           <span class="sr-only">Мы в Telegram</span>
         </a>
       </li>
     </ul>
     <a class="academy-logo" href="#">
       <span class="sr-only">HTML Academy</span>
-      <img alt="" class="social-links-list__icon" src="">
+      <img alt="" class="social-links-list__icon" height="24" src="" width="24">
     </a>
   </div>
 </footer>
