--- a/source/index.html
+++ b/source/index.html
@@ -13,14 +13,14 @@
 <body class="page__body">
 <header class="main-header">
   <nav class="main-header__nav nav">
-    <a class="nav__main-link" href="index.html"><img alt="Супер котик в плаще" src="#"></a>
+    <a class="nav__main-link" href="index.html"><img alt="Супер котик в плаще" height="50" src="#" width="150"></a>
     <ul class="nav__links">
       <li class="nav__item"><a href="index.html">Главная</a></li>
       <li class="nav__item"><a href="catalog.html">Каталог продукции</a></li>
       <li class="nav__item"><a href="#">Подбор программы</a></li>
     </ul>
   </nav>
-  <button aria-label="Мобильное меню" class="nav__toggle"><img alt="" src="#"></button>
+  <button aria-label="Мобильное меню" class="nav__toggle"><img alt="" height="24" src="#" width="24"></button>
 </header>
 <main>
   <section class="intro">
@@ -92,13 +92,13 @@
       <div class="real-example__comparison">
         <div class="real-example__comparison-container">
           <div class="real-example__image-wrapper real-example__image-wrapper--before">
-            <img alt="Кот до диеты" class="real-example__image" src="img/before-cat.jpg">
+            <img alt="Кот до диеты" class="real-example__image" height="240" src="img/before-cat.jpg" width="320">
           </div>
           <div class="real-example__image-wrapper real-example__image-wrapper--after">
-            <img alt="Кот после диеты" class="real-example__image" src="img/after-cat.jpg">
+            <img alt="Кот после диеты" class="real-example__image" height="240" src="img/after-cat.jpg" width="320">
           </div>
           <div class="real-example__slider">
-            <button aria-label="Передвинуть ползунок сравнения" class="real-example__slider-handle" type="button"></button>
+            <button aria-hidden="true" class="real-example__slider-handle" type="button"></button>
           </div>
         </div>
       </div>
@@ -126,26 +126,26 @@
     <ul class="footer__social-links social-links-list">
       <li class="social-links-list__list">
         <a class="social-links-list__item" href="">
-          <img alt="" class="social-links-list__icon" src="">
+          <img alt="" class="social-links-list__icon" height="24" src="" width="24">
           <span class="sr-only">Мы в VK</span>
         </a>
       </li>
       <li class="social-links-list__list">
         <a class="social-links-list__item" href="">
-          <img alt="" class="social-links-list__icon" src="">
+          <img alt="" class="social-links-list__icon" height="24" src="" width="24">
           <span class="sr-only">Мы в Youtume</span>
         </a>
       </li>
       <li class="social-links-list__list">
         <a class="social-links-list__item" href="">
-          <img alt="" class="social-links-list__icon" src="">
+          <img alt="" class="social-links-list__icon" height="24" src="" width="24">
           <span class="sr-only">Мы в Telegram</span>
         </a>
       </li>
     </ul>
     <a class="academy-logo" href="#">
       <span class="sr-only">HTML Academy</span>
-      <img alt="" class="social-links-list__icon" src="">
+      <img alt="" class="social-links-list__icon" height="24" src="" width="24">
     </a>
   </div>
 </footer>
